--- a/webBanTiVi/src/main/resources/templates/user/index.html
+++ b/webBanTiVi/src/main/resources/templates/user/index.html
@@ -46,14 +46,14 @@
 <div class="layout-content-navbar layout-without-menu ">
     <div class="layout-container">
         <div class="layout-page">
-            <div th:replace="~{/user1/layout/_navbar.html}">
+            <div th:replace="~{/user/layout/_navbar.html}">
             </div>
             <div class="content-wrapper">
                 <div class="container-xxl flex-grow-1 container-p-y ">
                     <div  th:replace="~{${session.pageView}}"></div>
 <!--                  <input id="staffIndex" th:value="${jwt}" hidden="" >-->
                 </div>
-                <div th:replace="~{/user1/layout/_footer.html}"></div>
+                <div th:replace="~{/user/layout/_footer.html}"></div>
                 <div class="content-backdrop fade"></div>
             </div>
         </div>
