khánh up đầy đủ luồng chức năng khuyến mại

--- a/webBanTiVi/src/main/resources/templates/login/register.html
+++ b/webBanTiVi/src/main/resources/templates/login/register.html
@@ -113,8 +113,7 @@
                             </div>
                         </div>
                         <div class="mb-3 form-password-toggle">
-                            <label class="form-label" for="password"
-                            >Nhập lại mật khẩu</label>
+                            <label class="form-label" for="password">Nhập lại mật khẩu</label>
                             <div class="input-group input-group-merge">
                                 <input
                                         type="password"
@@ -143,7 +142,7 @@
                                 </label>
                             </div>
                         </div>
-                        <button class="btn btn-primary d-grid w-100" id="dangky" name="dangky">Đăng ký</button>
+                        <button  class="btn btn-primary d-grid w-100" id="dangky" name="dangky">Đăng ký</button>
                     </form>
 
                     <p class="text-center">
